; ModuleID = '/home/carl/AnghaBench/vlc/bin/extr_rootwrap.c_is_allowed_port.c'
source_filename = "/home/carl/AnghaBench/vlc/bin/extr_rootwrap.c_is_allowed_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_allowed_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_allowed_port(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @ntohs(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp eq i32 %5, 80
  br i1 %6, label %13, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = icmp eq i32 %8, 443
  br i1 %9, label %13, label %10

10:                                               ; preds = %7
  %11 = load i32, i32* %2, align 4
  %12 = icmp eq i32 %11, 554
  br label %13

13:                                               ; preds = %10, %7, %1
  %14 = phi i1 [ true, %7 ], [ true, %1 ], [ %12, %10 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i32 @ntohs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
